--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 
-  <section class="bg-gray-50 dark:bg-gray-900">
+  <!-- <section class="bg-gray-50 dark:bg-gray-900">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
       <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
         Glimmer App!
@@ -74,5 +74,5 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 </html>
